<?xml version="1.0"?>
<package format="2">
  <name>kinfu_cv_contrib_wrapper</name>
  <version>0.0.0</version>
  <description>Wraps our modified kinfu package into a ROS package</description>

  <maintainer email="author@todo.todo">author</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
